# stock-tracker

./: README.md  client.py  pyproject.toml  server.py
configs/: client.yml  server.yml
src/: load_config.py
src/client/database/: db.py
src/client/loggers/: base.py  registry.py
src/client/loggers/providers/: pocketoption.py
src/client/news/: base.py  default_config.py
src/client/news/dataflows/: config.py  interface.py  reddit.py  stockstats_utils.py  stocktwits.py  symbol_utils.py  yfinance_news.py
src/server/database/: __init__.py  db.py  models.py
src/server/schemas/: webserver.py
src/server/web/: main.py
src/server/web/routers/: registration.py
