[project]
name = "main"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyyaml>=6.0.3",
]

[dependency-groups]
dev = ["ruff>=0.15.15"]
server = [
    "fastapi[standard]>=0.136.3",
    "pydantic>=2.13.4",
    "sqlalchemy>=2.0.50",
    "uvicorn>=0.48.0",
]
client = [
    "playwright>=1.60.0",
    "playwright-stealth>=2.0.3",
]
